@@ -1,5 +1,5 @@
 Package: bayesTFR
-Version: 7.4-2.9002
+Version: 7.4-2.9003
 Date: 2024-06-05
 Title: Bayesian Fertility Projection
 Author: Hana Sevcikova (hanas@uw.edu), Leontine Alkema (alkema@nus.edu.sg), Peiran Liu (prliu@uw.edu), Adrian Raftery (raftery@uw.edu), Bailey Fosdick (bfosdick@uw.edu), Patrick Gerland (gerland@un.org)
